@@ -106,13 +106,12 @@
 
         <parcel-plugin.version>0.7.8</parcel-plugin.version>
 
-        <java.version>1.7</java.version>
+        <java.version>1.8</java.version>
         <scala.version>2.10</scala.version>
 
         <os-platform.version />
 
         <project.runtime.heap.max>1024</project.runtime.heap.max>
-        <project.runtime.perm.heap.max>256</project.runtime.perm.heap.max>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     </properties>
@@ -295,7 +294,6 @@
                     <configuration>
                         <argLine>
                             -Xmx${project.runtime.heap.max}m
-                            -XX:MaxPermSize=${project.runtime.perm.heap.max}m
                         </argLine>
                     </configuration>
                 </plugin>
